[package]
name = "trish"
version = "0.2.1"
authors = ["Blendman974 <admin@guillaume-etheve.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.5.0", features = ["full"] }

serenity = {version = "0.10.5", default-features = false, features = ["builder", "cache", "client", "framework", "standard_framework", "http", "model", "utils", "http", "rustls_backend", "gateway", "voice"]}
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql", "macros", "migrate" , "chrono"] }

# Logging
log = "0.4.14"
env_logger = "0.8.3"

# Serialisation in json and yaml
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"

#Utils
captcha = "0.0.8"
rand = "0.8.3"
chrono = "0.4.19"
futures = "0.3.14"
thiserror = "1.0.24"

uuid = {version = "0.8.2", features = ["v4"]}

anyhow = "1.0.40"
reqwest = "0.11.3"